--- a/style.css
+++ b/style.css
@@ -6,43 +6,31 @@ body {
     background-color: #dddada;
 
 }
-.resume {
-    max-width: 800px;
-    margin: auto;
-    background: rgb(214, 208, 208);
-    padding: 30px;
-    box-shadow: 0 0 10px rgba(1, 34, 16, 0.1);
-}
 .header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 20px;
 }
-.name {
-    font-size: 28px;
-    font-weight: bold;
-}
-.contact {
-    font-size: 14px;
-    color: #085816da;
-}
-.photo {
-    width: 50px;
-    height: 100px;
-    border-radius: 5px;
-}
+
+
 h2 {
     border-bottom: 2px solid #02290cce;
     padding-bottom: 10px;
     margin-top: 30px;
 }
-.skills, .experience {
-    margin-top: 20px;
+
+.column-container {
+    display: flex;
 }
-.skills ul, .experience ul {
-    padding-left: 20px;
+
+.column-left {
+    flex: 1;
+    margin-right: 60px;
 }
-.job-title {
-    font-weight: bold; 
-    </style> }
+
+.column-right {
+    flex: 1;
+    margin-left: 60px;
+}
+
